# technical_trading_tool

./: .gitignore  JOURNAL.md  README.rst
data/in/: README.md
pytechnicaltradingtool/: README.md  alembic.ini  pyproject.toml
pytechnicaltradingtool/common/: settings.py
pytechnicaltradingtool/migrations/: env.py
pytechnicaltradingtool/requirements/: base.txt
requirements/: base.txt  local.txt
src/: main.py
src/schemas/: listing_data.py
